      fs.wrapfs.subfs.
    * Path-handling fixes for OSFS on win32:
        * Work properly when pointing to the root of a drive.
        * Better handling of remote UNC paths.
        * Add ability to switch off use of long UNC paths.
    * OSFSWatchMixin improvements:
        * watch_inotify:  allow more than one watcher on a single path.
        * watch_win32:  don't create immortal reference cycles.
        * watch_win32:  report errors if the filesystem does't support
                        ReadDirectoryChangesW.
    * MountFS: added support for mounting at the root directory, and for
      mounting over an existing mount.
    * Added 'getpathurl' and 'haspathurl' methods.
    * Added utils.isdir(fs,path,info) and utils.isfile(fs,path,info); these
      can often determine whether a path is a file or directory by inspecting
      the info dict and avoid an additional query to the filesystem.
    * Added utility module 'fs.filelike' with some helpers for building and
      manipulating file-like objects.
    * Added getmeta and hasmeta methods
    * Separated behaviour of setcontents and createfile
    * Added a getmmap to base
    * Added command line scripts fsls, fstree, fscat, fscp, fsmv
    * Added command line scripts fsmkdir, fsmount
    * Made SFTP automatically pick up keys if no other authentication
      is available
    * Optimized listdir and listdirinfo in SFTPFS
    * Made memoryfs work with threads
    * Added copyfile_non_atomic and movefile_non_atomic for improved performance of multi-threaded copies
    * Added a concept of a writeable FS to MultiFS
    * Added ilistdir() and ilistdirinfo() methods, which are generator-based
      variants of listdir() and listdirinfo().
    * Removed obsolete module fs.objectree; use fs.path.PathMap instead.
    * Added setcontents_async method to base
    * Added `appdirfs` module to abstract per-user application directories
    
0.5: